test/negative/parse_missing_colon_param.mut
# Negative: missing colon after parameter name
def foo(x i64) -> i64
    return x
end
